# controllers/loanController.js
@@ -15,12 +15,12 @@ exports.createLoan = async (req, res, next) => {
               "schema": {
                     type: "object",
                     properties: {
-                        reciever_address: {
+                        receiver_address: {
                             type: "string",
                             description: 'loan reciever wallet address',
                             example:"hgs568i2yyrr6yfa8s7dfavysdtf86"
                         },
-                        reciever_staked_points: {
+                        receiver_staked_points: {
                             type: "number",
                             description: 'loan reciever points staked again the loan',
                             example:"25"
@@ -29,6 +29,11 @@ exports.createLoan = async (req, res, next) => {
                             type: "number",
                             description: 'loan amount',
                             example:"25"
+                        },
+                        interest_rate: {
+                            type: "number",
+                            description: 'Percentage Loan interest rate must be between 0 and 100',
+                            example:"3"
                         },
                         agent_address: {
                             type: "string",
@@ -61,29 +66,20 @@ exports.createLoan = async (req, res, next) => {
                         },                   
                                        
                     },
-                    required: ["reciever_address","reciever_staked_points", "loan_amount", "agent_address", "start_date", "end_date", "backers"]
+                    required: ["receiver_address","receiver_staked_points", "loan_amount", "agent_address", "start_date", "end_date", "backers"]
                 }
             }
         }        
     }
     #swagger.responses[200] = {
         description: '',
-        schema: {
-            type: "object",
-            properties: {
-                address: {
-                    type: "string",
-                    description: 'contract block chain address',
-                    example:"hgs568i2yyrr6yfa8s7dfavysdtf86"
-                },
-            }
-        }
+        schema: {$ref:'#/components/schemas/contract-object'}
     }  
      */
   try {
     const {
-      reciever_address,
-      reciever_staked_points,
+      receiver_address,
+      receiver_staked_points,
       backers,
       agent_address,
       loan_amount,
@@ -92,6 +88,77 @@ exports.createLoan = async (req, res, next) => {
     } = req.body;
 
     return res.send({ address: "hgs568i2yyrr6yfa8s7dfavysdtf86" });
+  } catch (err) {
+    err = errorUtils.errorParser(err);
+    res.status(400).send(err);
+    // return next(err)
+  }
+};
+
+/**
+ * initialize a loan
+ */
+exports.payment = async (req, res, next) => {
+  /**
+     * #swagger.tags = ['Loan']
+     * #swagger.summary = 'Payment'
+     * #swagger.description = 'Endpoint facilitates loan repayment'
+    #swagger.requestBody {
+        required: true,
+        "@content": { 
+            "application/json": {
+              "schema": {
+                    type: "object",
+                    properties: {
+                        contract_id: {
+                            type: "string",
+                            description: 'Contract Id, is a reference to the smart contract the user wants to effect payment on',
+                            example:"hgs568i2yyrr6yfa8s7dfavysdtf86"
+                        },
+                        amount: {
+                            type: "number",
+                            description: 'loan payment amount',
+                            example:"25"
+                        },
+                        agent_address: {
+                            type: "string",
+                            description: 'agent_address',
+                            example:"hgs568i2yyrr6yfa8s7dfavysdtf86"
+                        }           
+                    },
+                    required: ["contract_id", "amount", "agent_address"]
+                }
+            }
+        }        
+    }
+    #swagger.responses[200] = {
+        description: '',
+        schema: {$ref:'#/components/schemas/contract-object'}
+    }  
+     */
+  try {
+    const { id, amount, agent_address } = req.body;
+
+    let contract_state = {
+      contract_id: "hgs568i2yyrr6yfa8s7dfavysdtf86",
+      start_date: new Date(),
+      end_date: new Date(),
+      loan_amount: 300,
+      interest_rate: 3,
+      amount_payed: 0,
+      receiver_address: "hgs568i2yyrr6yfa8s7dfavysdtf86",
+      receiver_staked_points: 25.6,
+      backers: [
+        {
+          address: "hgs568i2yyrr6yfa8s7dfavysdtf86",
+          points: 25,
+        },
+      ],
+      balance: 300,
+      hasDefaulted: false,
+      hasCompleted: false,
+    };
+    return res.send(contract_state);
   } catch (err) {
     err = errorUtils.errorParser(err);
     res.status(400).send(err);
